Spring In Action Chapter 3 Redundant code removed.