@@ -12,7 +12,7 @@ import java.util.Optional;
 
 @Repository
 public class JdbcIngredientRepository implements IngredientRepository{
-    private JdbcTemplate jdbcTemplate;
+    private final JdbcTemplate jdbcTemplate;
 
     @Autowired
     public JdbcIngredientRepository(JdbcTemplate jdbcTemplate)
@@ -30,11 +30,11 @@ public class JdbcIngredientRepository implements IngredientRepository{
     public Optional<Ingredient> findById(String id)
     {
         List<Ingredient> results = jdbcTemplate.query("select id, name, type from Ingredient where id=?",this::mapRowToIngredient,id);
-        if(results.size()==0)
+        if(results.isEmpty())
         {
             return Optional.empty();
         }
-        return Optional.of(results.get(0));
+        return Optional.of(results.getFirst());
     }
 
     @Override
